put client players on new threads